--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.93.3"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.8"
   }
 }
